Edit html files

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,17 +1,4 @@
 <!DOCTYPE html>
-
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Doc</title>
-</head>
-
-    <body>
-        
-    </body>
-</html>
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1> Hello World! Lets buy <em>drugs</em> with bitcoin</h1>
     
 </body>
 </html>
